tests/src/frontend/typechecking/invalid/type_alias_generic_1.sk
class Bar() {}

type Foo<T> = Bar<T>; /* expected 0 params */
